Fixing Spacing on Footer Component
- added project-details class to paragraph css.

--- a/src/styles/ProjectCards.module.css
+++ b/src/styles/ProjectCards.module.css
@@ -1,6 +1,3 @@
-p {
-    padding-top: 1rem;
-}
 .project-heading {
     text-align: center;
     padding: 4rem 0 2rem 0;
@@ -39,6 +36,10 @@ p {
     padding-bottom: 1rem;
     font-size: 1.1rem;
     text-align: center;
+}
+
+.project-details p {
+    padding-top: 1rem;
 }
 
 .project-btns {
